--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ logging.file.max-history=30
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - [%thread] %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - [%thread] %logger{36} - %msg%n
 
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
 
 spring.security.enabled=false
