--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,5 +3,6 @@ global:
 
 scrape_configs:
   - job_name: 'spring-boot-app'
+    metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['app:8080']
