--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,6 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - [%thread] %logger{36} - 
 
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+management.endpoint.health.show-details=always
 
 spring.security.enabled=false
